src/objects/SLCA2__CA_Filters__c.object
<CustomObject>
    <description>filter creteria settings for Calendar</description>
    <fields>
        <fullName>SLCA2__calendarId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>calendarId</label>
        <referenceTo>SLCA2__CA_Calendar__c</referenceTo>
        <relationshipLabel>CA_FiltersPlural</relationshipLabel>
        <relationshipName>CA_FiltersPlural</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLCA2__fieldName__c</fullName>
        <label>fieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__fieldType__c</fullName>
        <label>fieldType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__operator__c</fullName>
        <label>operator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__order__c</fullName>
        <label>order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLCA2__value__c</fullName>
        <label>value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CA_Filters</label>
    <listViews>
        <fullName>SLCA2__All</fullName>
        <columns>SLCA2__calendarId__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SLCA2__fieldName__c</columns>
        <columns>SLCA2__fieldType__c</columns>
        <columns>SLCA2__operator__c</columns>
        <columns>SLCA2__order__c</columns>
        <columns>SLCA2__value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CA_Filters Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_FiltersPlural</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>